--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <div class="loading-anime">
         <svg version="1.1" id="loading" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="356.875" height="553.063" viewBox="0 0 356.875 553.063">
           <g id="loading-anm">
-            <path id="path1" d="M132.7,371.037C26.73,307.931-7.136,188.2,35.11,108.988c28.966-54.316,91.331-85.665,151.653-86.5,59.482-.82,124.036,27.97,153.929,82.229,43.019,78.085,8.805,200.285-101.007,264.325" transform="translate(-9.625 -14.688)"/>
-            <path id="path2" d="M187.616,406.887l-28.168-32.436,56.052-.569Z" transform="translate(-9.625 -14.688)"/>
-            <path id="path3" d="M187.616,403.473L155.18,525.82l31.014,34.143,31.3-31.014Z" transform="translate(-9.625 -14.688)"/>
+            <path id="path1" d="M132.7,371.037C26.73,307.931-7.136,188.2,35.11,108.988c28.966-54.316,91.331-85.665,151.653-86.5,59.482-.82,124.036,27.97,153.929,82.229,43.019,78.085,8.805,200.285-101.007,264.325"/>
+            <path id="path2" d="M187.616,406.887l-28.168-32.436,56.052-.569Z"/>
+            <path id="path3" d="M187.616,403.473L155.18,525.82l31.014,34.143,31.3-31.014Z"/>
           </g>
         </svg>
       </div>
