--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header><!--------------------headerここから------------------------->
       <h1><a href="#"><img src="img/logo.webp" alt="ET"></a></h1>
       <div class="header-right">
-        <a href="" class="buybtn btn">ご購入はこちら</a>
+        <a href="#buy" class="buybtn btn">ご購入はこちら</a>
         <div class="openbtn-wrapper">
           <img src="img/openbtn.webp" alt="">
           <div class="openbtn">
@@ -42,24 +42,24 @@
       <nav id="g-nav">
         <a href="" class="g-nav-logo"><img src="img/logo03.webp" alt="ET"></a>
         <ul>
-          <li><a href="">Top</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">How to Use</a></li>
-          <li><a href="">Re make</a></li>
-          <li><a href="">FAQ</a></li>
+          <li><a href="#top">Top</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#howto">How to Use</a></li>
+          <li><a href="#remake">Re make</a></li>
+          <li><a href="#faq">FAQ</a></li>
           <li><a href="">Contact</a></li>
         </ul>
         <div class="buy-content">
           <div class="buy-top">ご購入はこちらから</div>
           <div class="buy-bottom">
-            <a href="" class="rakuten btn"><img src="img/rakuten.webp" alt=""></a>
-            <a href="" class="amazon btn"><img src="img/Amazon.webp" alt=""></a>
+            <a href="https://www.rakuten.co.jp/ebisutai/" class="rakuten btn" target=”_blank”><img src="img/rakuten.webp" alt=""></a>
+            <a href="https://www.amazon.co.jp/stores/page/5C96821A-1C70-4162-BC5C-225B9C776379" class="amazon btn" target=”_blank”><img src="img/Amazon.webp" alt=""></a>
           </div>
         </div>
       </nav>
     </header><!--------------------headerここまで------------------------->
     <main>
-      <section class="mainvisual">
+      <section class="mainvisual" id="top">
         <img src="img/mainvisual1.webp" alt="" class="mainvisual1">
         <img src="img/mainvisual2.webp" alt="" class="mainvisual2">
         <p><span class="char">E</span><span class="char">B</span><span class="char">I</span><span class="char">S</span><span class="char">U</span><span class="char">T</span><span class="char">A</span><span class="char">I</span></p>
@@ -91,7 +91,7 @@
           <span class="concept-text2">もっと気楽にネクタイを楽しんでほしい。</span><br><span class="concept-text2">「エビスタイがある」という</span><br><span class="concept-text2">安心を提供したい。</span><br><span class="concept-text2">お客様が笑顔になるお手伝いがしたい。</span><br><span class="concept-text2">それが私たちの想いです。</span>
         </p>
       </section>
-      <section class="about">
+      <section class="about" id="about">
         <div class="section-wrapper">
           <h2>
             <p class="eb">-About-</p>
@@ -144,7 +144,7 @@
         </div>
       </div>
       </section>
-      <section class="howto">
+      <section class="howto" id="howto">
         <div class="howto-frame frame1"></div>
         <div class="howto-frame frame2"></div>
         <div class="section-wrapper">
@@ -153,13 +153,12 @@
             <p>エビスタイの使い方</p>
           </h2>
           <div class="howto-wrapper">
-            <video controls autoplay muted loop playsinline src="img/howtouse.mp4"></video>
+            <video autoplay muted loop playsinline src="img/howtouse.mp4"></video>
             <div class="howto-text">
-              <p>輪っかの先端を持ち、<br class="sp-br">結び目をまっすぐ下ろします。<br><br>
-              輪っかを首にかけます。<br><br>
-              ネクタイの細い方を持ち、<br class="sp-br">結び目を上げれば完了です。</p>
-              <p>片方だけ引いたり、ねじれたまま引くと<br class="sp-br">故障の原因になります。<br>
-                ゆるめる時は結び目を下ろしてください。</p>
+              <div class="howto-text-wrapper"><img src="img/tie-icon.webp" alt=""><p>輪っかの先端を持ち、<br class="sp-br">結び目をまっすぐ下ろします。<br></div><br>
+              <div class="howto-text-wrapper"><img src="img/tie-icon.webp" alt="">輪っかを首にかけます。<br></div><br>
+              <div class="howto-text-wrapper"><img src="img/tie-icon.webp" alt="">ネクタイの細い方を持ち、<br class="sp-br">結び目を上げれば完了です。</p></div>
+              <p class="howto-last">片方だけ引いたり、ねじれたまま引くと<br class="sp-br">故障の原因になります。<br>ゆるめる時は結び目を下ろしてください。</p>
             </div>
           </div>
         </div>
@@ -197,7 +196,7 @@
           </picture>
         </div>
       </section>
-      <section class="remake">
+      <section class="remake" id="remake">
         <h2 class="fdin_up">
           <p class="eb">Re Make</p>
           <p>リメイク</p>
@@ -207,15 +206,15 @@
           <p>既存のネクタイのほとんどを、<br class="sp-br">エビスタイにリメイク（再加工）できます。</p>
         </div>
         <div class="remake-box">
-          <p>装着時の長さ： <br class="sp-br">紳士49cm、ユニフォーム45cm or 38cmの<br class="sp-br">いずれかをお選びいただけます。</p>
+          <p>装着時の長さ<span class="pc-only">： </span><br class="sp-br">紳士49cm、ユニフォーム45cm or 38cmの<br class="sp-br">いずれかをお選びいただけます。</p>
           <p>注文&決済完了後、メールに記載された<br class="sp-br">送付先住所にネクタイをお送りください。</p>
           <p>一度リメイクすると元に戻すことはできません。<br>
             ファスナー部分はおまかせになります。<br class="sp-br">（ネクタイに近いお色をお選びいたします。）<br>
             ナロータイなどの細いネクタイや、伸縮性の<br class="sp-br">少ない特殊な生地はリメイクできません。</p>
         </div>
-        <a href="" class="remake-btn">ご依頼はこちら</a>
+        <a href="https://item.rakuten.co.jp/ebisutai/re-00800/" class="remake-btn" target=”_blank”>ご依頼はこちら</a>
       </section>
-      <section class="faq">
+      <section class="faq" id="faq">
         <h2>よくあるご質問</h2>
         <ul class="acordion">
           <li>
@@ -246,7 +245,7 @@
             <section>
               <h3 class="faq-title">生地を持ち込んで作ってもらうことはできますか？</h3>
               <div class="faq-box">
-                <p>生地によっては可能です。柔らかすぎる生地は加工できません。<br>実際に持ち込んでいただき、生地を触っての判断になります。<br>幅50cm、長さ60cmで1本お作りできます（ファスナーカラーお任せの場合）。<br>詳しくはお問い合わせください。</p>
+                <p>生地によっては可能です。柔らかすぎる生地は加工できません。<br>実際に生地を触ってからの判断となりますので、一度ご郵送をお願いしています（持ち込みも可）。<br>幅50cm、長さ60cmで1本お作りできます（ファスナーカラーお任せの場合）。<br>詳しくはお問い合わせください。</p>
               </div>
             </section>
           </li>
@@ -263,25 +262,25 @@
       <section class="sns">
         <h2 class="eb">SNS</h2>
         <div class="sns-link">
-          <a href=""><img src="img/twitter.webp" alt="Twitter"></a>
-          <a href=""><img src="img/instagram.webp" alt="Instagram"></a>
+          <a href="https://twitter.com/1ebisutai" target=”_blank”><img src="img/twitter.webp" alt="Twitter"></a>
+          <a href="https://www.instagram.com/ebisutai.rakuten/" target=”_blank”><img src="img/instagram.webp" alt="Instagram"></a>
         </div>
       </section>
-      <section class="buy">
+      <section class="buy" id="buy">
         <div class="buy-top">ご購入はこちらから</div>
         <div class="buy-bottom">
-          <a href="" class="rakuten btn"><img src="img/rakuten.webp" alt=""></a>
-          <a href="" class="amazon btn"><img src="img/Amazon.webp" alt=""></a>
+          <a href="https://www.rakuten.co.jp/ebisutai/" class="rakuten btn" target=”_blank”><img src="img/rakuten.webp" alt=""></a>
+          <a href="https://www.amazon.co.jp/stores/page/5C96821A-1C70-4162-BC5C-225B9C776379" class="amazon btn" target=”_blank”><img src="img/Amazon.webp" alt=""></a>
         </div>
       </section>
     </main>
     <footer><!--------------------footerここから------------------------->
-      <a href="" class="footer-logo"><img src="img/logo2.webp" alt=""></a>
+      <a href="#top" class="footer-logo"><img src="img/logo2.webp" alt=""></a>
       <div class="footer-right">
         <a href="" class="mail-btn btn">お問い合わせはこちら</a>
         <div class="footer-sns">
-          <a href=""><i class="fa-brands fa-twitter"></i>Twitter</a>
-          <a href=""><i class="fa-brands fa-instagram"></i>Instagram</a>
+          <a href="https://twitter.com/1ebisutai" target=”_blank”><i class="fa-brands fa-twitter"></i>Twitter</a>
+          <a href="https://www.instagram.com/ebisutai.rakuten/" target=”_blank”><i class="fa-brands fa-instagram"></i>Instagram</a>
         </div>
       </div>
     </footer><!--------------------footerここまで------------------------->
