--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <div class="loading-anime">
         <svg version="1.1" id="loading" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="356.875" height="553.063" viewBox="0 0 356.875 553.063">
           <g id="loading-anm">
-            <path id="path1" d="M132.7,371.037C26.73,307.931-7.136,188.2,35.11,108.988c28.966-54.316,91.331-85.665,151.653-86.5,59.482-.82,124.036,27.97,153.929,82.229,43.019,78.085,8.805,200.285-101.007,264.325"/>
-            <path id="path2" d="M187.616,406.887l-28.168-32.436,56.052-.569Z"/>
-            <path id="path3" d="M187.616,403.473L155.18,525.82l31.014,34.143,31.3-31.014Z"/>
+            <path id="path1" d="M123.7,358.037C17.73,294.931-16.136,175.2,26.11,95.988c28.966-54.315,91.331-85.664,151.653-86.5,59.482-.82,124.036,27.97,153.929,82.228,43.019,78.085,8.805,200.285-101.007,264.325"/>
+            <path id="path2" d="M178.616,393.887l-28.168-32.436,56.052-.569Z"/>
+            <path id="path3" d="M178.616,390.473L146.18,512.82l31.014,34.143,31.3-31.014Z"/>
           </g>
         </svg>
       </div>
@@ -35,7 +35,7 @@
       </div>
       <nav id="g-nav">
         <a href="" class="g-nav-logo"><img src="img/logo03.webp" alt="ET"></a>
-        <ul>
+        <ul class="eb">
           <li><a href="#top">Top</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#howto">How to Use</a></li>
@@ -56,7 +56,7 @@
       <section class="mainvisual" id="top">
         <img src="img/mainvisual1.webp" alt="" class="mainvisual1">
         <img src="img/mainvisual2.webp" alt="" class="mainvisual2">
-        <p><span class="char">E</span><span class="char">B</span><span class="char">I</span><span class="char">S</span><span class="char">U</span><span class="char">T</span><span class="char">A</span><span class="char">I</span></p>
+        <p class="eb"><span class="char">E</span><span class="char">B</span><span class="char">I</span><span class="char">S</span><span class="char">U</span><span class="char">T</span><span class="char">A</span><span class="char">I</span></p>
         <div class="scrolldown"><span>Scroll</span></div>
       </section>
       <svg version="1.1" id="concept-top" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="816.594" height="247.125" viewBox="0 0 816.594 247.125">
