--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EBISUTAI</title>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+    <script src="//cdn.jsdelivr.net/npm/vivus@latest/dist/vivus.min.js"></script>
     <!-- リセットCSS -->
     <link rel="stylesheet" href="https://unpkg.com/destyle.css@3.0.2/destyle.min.css">
     <!-- 自作CSS -->
@@ -22,6 +24,38 @@
         </svg>
       </div>
     </div>
+    <script type="text/javascript">
+      $(function(){
+
+      /* ローディング */
+          /* vivus */
+      var stroke;
+      stroke =new Vivus( "loading-anm", //SVGに指定したID
+      {
+          start: "manual",
+          type: "oneByOne",  //アニメーションのタイプ
+          duration: 70, //アニメーションの時間
+          forceRender: false, //パスが更新で再レンダリングさせない
+      },
+      function (obj) {
+      obj.el.classList.add("done"); //アニメーション後にdoneクラスを付与
+      }
+      );
+
+      $('.loading-anime').show();
+
+      stroke.play();//SVGアニメーションの実行
+
+      });
+
+
+      $(window).on('load',function(){
+      $(".loading").delay(1000).fadeOut('slow');//ローディング画面を1秒待機してからフェイドアウト
+      $(".loading-anime").delay(1000).fadeOut('slow');//ロゴを1秒待機してからフェイドアウト
+      });
+
+
+    </script>
     <header><!--------------------headerここから------------------------->
       <h1><a href="#"><img src="img/logo.webp" alt="ET"></a></h1>
       <div class="header-right">
@@ -287,8 +321,6 @@
         </div>
       </div>
     </footer><!--------------------footerここまで------------------------->
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-    <script src="//cdn.jsdelivr.net/npm/vivus@latest/dist/vivus.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="js.js"></script>
