--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EBISUTAI</title>
     <!-- リセットCSS -->
-    <link rel="stylesheet" href="https://unpkg.com/destyle.css@3.0.2/destyle.min.css">
+    <link rel="stylesheet" href="html5reset-1.6.1.css">
     <!-- 自作CSS -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
-    <meta http-equiv='x-dns-prefetch-control' content='on'>
-    <link rel="preconnect dns-prefetch" href="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js">
   </head>
   <body>
     <div class="loading">
