--- a/index.html
+++ b/index.html
@@ -272,13 +272,13 @@
       <section class="buy" id="buy">
         <div class="buy-top">ご購入はこちらから</div>
         <div class="buy-bottom">
-          <a href="https://www.rakuten.co.jp/ebisutai/" class="rakuten btn" target=”_blank”><img src="img/rakuten.webp" alt=""></a>
-          <a href="https://www.amazon.co.jp/stores/page/5C96821A-1C70-4162-BC5C-225B9C776379" class="amazon btn" target=”_blank”><img src="img/Amazon.webp" alt=""></a>
+          <a href="https://www.rakuten.co.jp/ebisutai/" class="rakuten btn" target=”_blank”><img src="img/rakuten.webp" alt="Rakuten"></a>
+          <a href="https://www.amazon.co.jp/stores/page/5C96821A-1C70-4162-BC5C-225B9C776379" class="amazon btn" target=”_blank”><img src="img/Amazon.webp" alt="Amazon"></a>
         </div>
       </section>
     </main>
     <footer><!--------------------footerここから------------------------->
-      <a href="#top" class="footer-logo"><img src="img/logo2.webp" alt=""></a>
+      <a href="#top" class="footer-logo"><img src="img/logo2.webp" alt="EBISUTAI"></a>
       <div class="footer-right">
         <a href="" class="mail-btn btn">お問い合わせはこちら</a>
         <div class="footer-sns">
