--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
       </div>
       <nav id="g-nav">
-        <a href="" class="g-nav-logo"><img src="img/logo03.webp" alt="ET"></a>
+        <a href="#top" class="g-nav-logo"><img src="img/logo03.webp" alt="EBISUTAI"></a>
         <ul class="eb">
           <li><a href="#top">Top</a></li>
           <li><a href="#about">About</a></li>
