--- a/index.html
+++ b/index.html
@@ -282,8 +282,8 @@
       <div class="footer-right">
         <a href="" class="mail-btn btn">お問い合わせはこちら</a>
         <div class="footer-sns">
-          <a href="https://twitter.com/1ebisutai" target=”_blank”><i class="fa-brands fa-twitter"></i>Twitter</a>
-          <a href="https://www.instagram.com/ebisutai.rakuten/" target=”_blank”><i class="fa-brands fa-instagram"></i>Instagram</a>
+          <a href="https://twitter.com/1ebisutai" target=”_blank”><img src="img/twitter-icon.webp" alt="Twitter">Twitter</a>
+          <a href="https://www.instagram.com/ebisutai.rakuten/" target=”_blank”><img src="img/instagram-icon.webp" alt="Instagram">Instagram</a>
         </div>
       </div>
     </footer><!--------------------footerここまで------------------------->
@@ -292,7 +292,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="js.js"></script>
-    <!-- font awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </body>
 </html>
