--- a/index.html
+++ b/index.html
@@ -174,28 +174,28 @@
           </h2>
           <div class="scene-wrapper">
             <div class="scene">
-              <img src="img/uniform.webp" alt="Uniform" class="scene-img1">
+              <img src="img/uniform.webp" alt="Uniform" class="scene-img1" loading="lazy">
               <h3>ユニフォームとして</h3>
               <p>結び目が綺麗に統一されたエビスタイは、<br class="sp-br">企業・団体のユニフォームに最適です。<br>
                 学校の制服にも採用されています。<br>
                 </p>
             </div>
             <div class="scene">
-              <img src="img/formal.webp" alt="Formal" class="scene-img2">
+              <img src="img/formal.webp" alt="Formal" class="scene-img2" loading="lazy">
               <h3>フォーマルに</h3>
               <p>普段ネクタイをしない方も、<br class="sp-br">フォーマルな場面ではネクタイが必要です。<br>
                 そんな時、エビスタイがあれば大丈夫。<br>
                 お子様用のサイズもご用意しています。</p>
             </div>
             <div class="scene">
-              <img src="img/present.webp" alt="Present" class="scene-img3">
+              <img src="img/present.webp" alt="Present" class="scene-img3" loading="lazy">
               <h3>プレゼントに</h3>
               <p>京都西陣織で作った高級シルクエビスタイは<br class="sp-br">もちろん、着物生地で作ったエビスタイなど<br class="sp-br">和のテイストの物も大変喜ばれています。</p>
             </div>
           </div>
           <picture>
             <source srcset="img/beijing-pc.webp" media="(min-width: 900px)" type="image/webp" class="fdin_up">
-            <img src="img/beijing-sp.webp" alt="北京オリンピック公式ユニフォームとして採用されています" class="fdin_up">
+            <img src="img/beijing-sp.webp" alt="北京オリンピック公式ユニフォームとして採用されています" class="fdin_up" loading="lazy">
           </picture>
         </div>
       </section>
@@ -265,25 +265,25 @@
       <section class="sns">
         <h2 class="eb">SNS</h2>
         <div class="sns-link">
-          <a href="https://twitter.com/1ebisutai" target=”_blank”><img src="img/twitter.webp" alt="Twitter"></a>
-          <a href="https://www.instagram.com/ebisutai.rakuten/" target=”_blank”><img src="img/instagram.webp" alt="Instagram"></a>
+          <a href="https://twitter.com/1ebisutai" target=”_blank”><img src="img/twitter.webp" alt="Twitter" loading="lazy"></a>
+          <a href="https://www.instagram.com/ebisutai.rakuten/" target=”_blank”><img src="img/instagram.webp" alt="Instagram" loading="lazy"></a>
         </div>
       </section>
       <section class="buy" id="buy">
         <div class="buy-top">ご購入はこちらから</div>
         <div class="buy-bottom">
-          <a href="https://www.rakuten.co.jp/ebisutai/" class="rakuten btn" target=”_blank”><img src="img/rakuten.webp" alt="Rakuten"></a>
-          <a href="https://www.amazon.co.jp/stores/page/5C96821A-1C70-4162-BC5C-225B9C776379" class="amazon btn" target=”_blank”><img src="img/Amazon.webp" alt="Amazon"></a>
+          <a href="https://www.rakuten.co.jp/ebisutai/" class="rakuten btn" target=”_blank”><img src="img/rakuten.webp" alt="Rakuten" loading="lazy"></a>
+          <a href="https://www.amazon.co.jp/stores/page/5C96821A-1C70-4162-BC5C-225B9C776379" class="amazon btn" target=”_blank”><img src="img/Amazon.webp" alt="Amazon" loading="lazy"></a>
         </div>
       </section>
     </main>
     <footer><!--------------------footerここから------------------------->
-      <a href="#top" class="footer-logo"><img src="img/logo2.webp" alt="EBISUTAI"></a>
+      <a href="#top" class="footer-logo"><img src="img/logo2.webp" alt="EBISUTAI" loading="lazy"></a>
       <div class="footer-right">
         <a href="" class="mail-btn btn">お問い合わせはこちら</a>
         <div class="footer-sns">
-          <a href="https://twitter.com/1ebisutai" target=”_blank”><img src="img/twitter-icon.webp" alt="Twitter">Twitter</a>
-          <a href="https://www.instagram.com/ebisutai.rakuten/" target=”_blank”><img src="img/instagram-icon.webp" alt="Instagram">Instagram</a>
+          <a href="https://twitter.com/1ebisutai" target=”_blank”><img src="img/twitter-icon.webp" alt="Twitter" loading="lazy">Twitter</a>
+          <a href="https://www.instagram.com/ebisutai.rakuten/" target=”_blank”><img src="img/instagram-icon.webp" alt="Instagram" loading="lazy">Instagram</a>
         </div>
       </div>
     </footer><!--------------------footerここまで------------------------->
