--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
     </div>
     <header><!--------------------headerここから------------------------->
-      <h1><a href="#"><img src="img/logo.webp" alt="ET"></a></h1>
+      <h1><a href="#top"><img src="img/logo.webp" alt="ET"></a></h1>
       <div class="header-right">
         <a href="#buy" class="buybtn btn">ご購入はこちら</a>
         <div class="openbtn-wrapper">
