--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- 自作CSS -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
+    <!-- favicon -->
+    <link rel="icon" href="img/favicon.ico">
+    <link rel="apple-touch-icon" href="img/apple-touch-icon-180x180.png" sizes="180x180">
   </head>
   <body>
     <div class="loading">
