--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             <section>
               <h3 class="faq-title">生地を持ち込んで作ってもらうことはできますか？</h3>
               <div class="faq-box">
-                <p>生地によっては可能です。柔らかすぎる生地は加工できません。<br>実際に生地を触ってからの判断となりますので、一度ご郵送をお願いしています（持ち込みも可）。<br>幅50cm、長さ60cmで1本お作りできます（ファスナーカラーお任せの場合）。<br>詳しくはお問い合わせください。</p>
+                <p>生地によっては可能です。柔らかすぎる生地は加工できません。<br>実際に生地を触ってからの判断となりますので、一度ご郵送をお願いしています（持ち込みも可）。<br>幅50cm、長さ60cmで1本お作りできます。<br>詳しくはお問い合わせください。</p>
               </div>
             </section>
           </li>
@@ -259,7 +259,7 @@
             <section>
               <h3 class="faq-title">リメイクした物を元に戻すことはできますか？</h3>
               <div class="faq-box">
-                <p>できません。<br class="sp-br">ご了承の上でご注文ください。</p>
+                <p>元に戻すことはできません。<br class="sp-br">ご了承の上でご注文ください。</p>
               </div>
             </section>
           </li>
